--- a/app/elements/appregfee-service/appregfee-service.html
+++ b/app/elements/appregfee-service/appregfee-service.html
@@ -133,6 +133,17 @@
         on-response="fetchallstudentadmissionsearchResponse"
         debounce-duration="300"
         >
+
+    <iron-ajax
+        method="post"
+        id="fetchrtestudentadmissionsearchajax"
+        url="{{fetchrtestudentadmissionsearchurl}}"
+        params="{{fetchrtestudentadmissionsearchparam}}"
+        handle-as="json"
+        content-type="application/json"
+        on-response="fetchrtestudentadmissionsearchResponse"
+        debounce-duration="300"
+        >
   </template>
   <script>
   (function() {
@@ -533,7 +544,18 @@
         document.querySelector('adhoc-discount').autocompletearr(e.detail.response.returnval);
         document.querySelector('latefee-card').autocompletearr(e.detail.response.returnval);
         document.querySelector('defaulter-update').autocompletearr(e.detail.response.returnval);
-      }
+      },
+      fetchrtestudentadmissionsearchService:function(){
+        this.fetchrtestudentadmissionsearchurl=sessionStorage.getItem("addrinfo")+"/fetchrtestudentadmissionsearch-service";
+        var obj={"schoolid":"","academicyear":"","statusflag":""}  
+        obj.schoolid=localStorage.getItem("schoolid");  
+        this.fetchrtestudentadmissionsearchparam=obj;     
+        this.$.fetchrtestudentadmissionsearchajax.generateRequest();
+      },
+      fetchrtestudentadmissionsearchResponse:function(e){
+        // alert(JSON.stringify(e.detail.response.returnval));
+        document.querySelector('rtefee-card').autocompletearr(e.detail.response.returnval);
+    }
     });
   })();
   </script>
