--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -267,3 +267,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="duecheques-report/duecheques-report.html">
 <link rel="import" href="enquiry-conversion-report/enquiry-conversion-report.html">
 <link rel="import" href="foreports-service/foreports-service.html">
+<link rel="import" href="rtefeetype-schedule-card/rtefeetype-schedule-card.html">
+<link rel="import" href="rtefee-card/rtefee-card.html">
+<link rel="import" href="rte-installment-card/rte-installment-card.html">
+<link rel="import" href="rte-fee-service/rte-fee-service.html">
+<link rel="import" href="rtepattern-fee-service/rtepattern-fee-service.html">
