--- a/app/elements/schooltype-to-grade-displaycard/schooltype-to-grade-displaycard.html
+++ b/app/elements/schooltype-to-grade-displaycard/schooltype-to-grade-displaycard.html
@@ -54,6 +54,7 @@
         }
         document.querySelector('feetype-schedule-card').FnSetGrades(allgrades);
         document.querySelector('discount-master-card').FnSetGrades(allgrades);
+        document.querySelector('rtefeetype-schedule-card').FnSetGrades(allgrades);
         // document.querySelector('fee-structure-schedulecard').FnSetGrades(allgrades);
         var a=[];
         var overall=[];
@@ -106,6 +107,7 @@
         }
         
         document.querySelector('feetype-schedule-card').FnSetGrades(gradearr);
+        document.querySelector('rtefeetype-schedule-card').FnSetGrades(gradearr);
         document.querySelector('discount-master-card').FnSetGrades(gradearr);
         // document.querySelector('fee-structure-schedulecard').FnSetGrades(gradearr);
       },
