--- a/app/elements/rtefee-card/rtefee-card.html
+++ b/app/elements/rtefee-card/rtefee-card.html
@@ -483,7 +483,7 @@
          this.feearr=[];
          document.querySelector('#rteinstallment').selected=-1;
          // this.hidecommitinstallment=false;
-         this.hidenoofinstallment=true;
+         // this.hidenoofinstallment=true;
          installmentpattern="1";
          localStorage.setItem("curr_sess_installmentpattern",installmentpattern);
          this.fetchnoofinstallmenturl=sessionStorage.getItem("addrinfo")+"/fetchnoofinstallment-service";
