--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -300,6 +300,11 @@
             <div class="col-md-12">
               <enquiry-conversion-report></enquiry-conversion-report>
             </div>
+          </section>  
+          <section data-category="rtecollection-report">
+            <div class="col-md-12">
+              <rtecollection-report></rtecollection-report>
+            </div>
           </section>     
           </iron-pages>
           </div>
