--- a/app/elements/schedule-service/schedule-service.html
+++ b/app/elements/schedule-service/schedule-service.html
@@ -486,6 +486,7 @@
         document.querySelector('process-report').gradearr=gradearr;
         document.querySelector('dailyincome-report').gradearr=gradearr;
         document.querySelector('duecheques-report').gradearr=gradearr;
+        document.querySelector('rtecollection-report').gradearr=gradearr;
       },
       fetchgradeService:function(){       
         this.fetchgradeurl=sessionStorage.getItem("addrinfo")+"/fetchgrade-service"
