--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -272,3 +272,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="rte-installment-card/rte-installment-card.html">
 <link rel="import" href="rte-fee-service/rte-fee-service.html">
 <link rel="import" href="rtepattern-fee-service/rtepattern-fee-service.html">
+<link rel="import" href="rtecollection-report/rtecollection-report.html">
