--- a/app/elements/rtecollection-report/rtecollection-report.html
+++ b/app/elements/rtecollection-report/rtecollection-report.html
@@ -69,7 +69,7 @@
         <td>{{item.installment_type}}</td><td>{{item.mode_of_payment}}</td><td>{{item.cheque_no}}</td><td>{{item.bank_name}}</td><td>{{item.cheque_date}}</td><td>{{item.received_date}}</td>
         <td>{{item.receipt_no}}</td><td>{{item.installment_amount}}</td><td>{{item.fine_amount}}</td>
         <!-- <td>{{item.latefee_amount}}</td> -->
-        <td>{{item.adhoc_discount}}</td><td>{{item.total}}</td></tr>
+        <td>{{item.adhoc_discount}}</td><td>{{item.totalamount}}</td></tr>
       </template>
       <tr></tr>
       </tbody>
