--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -1054,6 +1054,8 @@
           for(var i=0;i<arr.length;i++){
             n=i+1;
             arr[i].sno=n;
+            if(arr[i].adhoc_discount==""||arr[i].adhoc_discount==null)
+               arr[i].adhoc_discount=0;
             arr[i].totalamount=parseFloat(arr[i].installment_amount)+parseFloat(arr[i].fine_amount)+parseFloat(arr[i].adhoc_discount);
             total=parseFloat(total)+parseFloat(arr[i].totalamount);
           }
