cheque collection report

--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -305,6 +305,11 @@
             <div class="col-md-12">
               <rtecollection-report></rtecollection-report>
             </div>
+          </section>
+          <section data-category="chequecollection-report">
+            <div class="col-md-12">
+              <chequecollection-report></chequecollection-report>
+            </div>
           </section>     
           </iron-pages>
           </div>
